# pdfrag

./: .env.example  .gitignore  NEXT_STEPS.md  PROJECT_DECISIONS.md  README.md  alembic.ini  compose.yaml  plan.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_document_upload.py  0002_ingestion_trace.py  0003_document_chunks.py  0004_chunk_dense_index_metadata.py  0005_chunk_sparse_index_metadata.py  0006_evidence_feedback.py  0007_rag_traces.py  0008_response_cache.py  0009_rag_evaluations.py
backend/app/: __init__.py  broker.py  cache.py  chat.py  chunking.py  config.py  context_packing.py  database.py  documents.py  generation.py  health.py  indexing.py  ingestion_quality.py  main.py  models.py  parsing.py  query_analysis.py  query_router.py  reranking.py  retrieval.py  sparse_indexing.py  storage.py  traces.py
backend/tests/: test_chat.py  test_chunking.py  test_config.py  test_context_packing.py  test_documents.py  test_generation.py  test_health.py  test_indexing.py  test_ingestion_quality.py  test_parsing.py  test_query_analysis.py  test_query_router.py  test_retrieval.py  test_sparse_indexing.py  test_traces.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx
frontend/app/(admin)/: layout.tsx  page.tsx
frontend/app/(admin)/chat/: page.tsx
frontend/app/(admin)/documents/: page.tsx
frontend/app/(user)/: layout.tsx
frontend/app/chat/: page.tsx
frontend/app/components/: sidebar-nav.tsx
frontend/app/documents/: page.tsx
scripts/: compare_generation_models.py  infra_status.sh  migrate_database.sh  run_golden_queries.py  run_ragas_eval.py  setup_backend.sh  setup_frontend.sh  start_backend.sh  start_frontend.sh  start_infra.sh  start_worker.sh  stop_infra.sh
(+6 files in other folders)
