[project]
name = "pdfrag"
version = "0.1.0"
description = "Inspectable enterprise document RAG"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.15,<2",
  "boto3>=1.37,<2",
  "docling>=2.70,<3",
  "dramatiq[redis,watch]>=2.0,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "langchain-ollama>=1.1.0",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "ragas==0.2.9",
  "redis>=5.2,<7",
  "sqlalchemy>=2.0,<3",
  "torch>=2.7,<3",
  "torchvision>=0.22,<1",
  "uvicorn[standard]>=0.34,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["backend"]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
